fix: renamed page and fixed layout issues

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -478,6 +478,7 @@ footer p {
   width: 100%;
   padding-left: 70px;
   padding-bottom: 50px;
+  float: left;
 }
 
 .circle_canvas {
@@ -493,6 +494,7 @@ footer p {
 
 .orangeBack {
   background-color: darkorange;
+  float: right;
 }
 
 .blueBack {
@@ -502,11 +504,12 @@ footer p {
 
 .reveal_oval {
   padding: 3%;
-  height: 15%;
+  height: 10%;
   width: 20%;
   background-color: orange;
   border-radius: 50%;
   text-align: center;
+  margin-left: 5%;
 } 
 
 .oval_transition {
@@ -539,6 +542,7 @@ footer p {
   text-align: center;
   padding: 2%;
   margin-top: 7%;
+  margin-left: 5%;
 }
 
 .rec_transition {
